# password-manager

./: .gitignore  Makefile  README.md  app.py  password-manager.spec  pyproject.toml  ruff.toml  sonar-project.properties
.github/workflows/:  build.yml  pylint.yml  pytests.yml  test-coverage.yml
backend/: connection.py  controller.py  custom_errors.py  mk_funcs.py  repository.py
backend/encrypting/: decrypt.py  encrypt.py  encrypting_mk.py
backend/queries/: mk_funcs.py
db/: mk_funcs.py  sql.txt
frontend/: custom_errors.py  main.py  pm_add_new_entry.py  pm_add_new_entry.ui  pm_create_new_storage.py  pm_create_new_storage.ui  pm_generating_settings.py  pm_generating_settings.ui  pm_login.py  pm_login.ui  pm_main_window.py  pm_main_window.ui  pm_new_entry.py  pm_new_entry.ui  pm_password_settings.py  pm_password_settings.ui  pm_signup.py  pm_signup.ui  pm_start.py  pm_start.ui  res-rc.qrc  res_rc.py  view.py
frontend/ui/: pm_new_entry.ui
scripts/: custom_errors.py  default_password_config.json  encryption.py  generate_password.py  generate_salt.py  load_json.py  path_helper.py  symbols.json
tests/: test_controller.py  test_encryption.py  test_generate_password.py  test_main.py  test_repository.py  test_view.py
