[project]
name = "password-manager"
version = "0.1.0"
description = "Application for generating and storing passwords encrypted using a master key."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "psycopg2>=2.9.10",
    "pyqt6>=6.4.2",
    "pyqt6-tools>=6.4.2.3.3",
]

[dependency-groups]
dev = [
    "ruff>=0.11.7",
]
