[project]
name = "password-manager"
version = "0.1.0"
description = "Application for generating and storing passwords encrypted using a master key."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=44.0.2",
    "psycopg2>=2.9.10",
    "pyqt6>=6.4.2",
    "pyqt6-tools>=6.4.2.3.3",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.13.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-qt>=4.4.0",
    "ruff>=0.11.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["password-manager"]
